force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__MC_List__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MC Audience</label>
    <referenceTo>MC4SF__MC_List__c</referenceTo>
    <relationshipLabel>MC Subscriber Activity</relationshipLabel>
    <relationshipName>MC_Subscriber_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>