force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__MC_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_Subscriber__c</fullName>
    <label>MC Subscriber</label>
    <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
    <relationshipLabel>MC Subscriber Activity</relationshipLabel>
    <relationshipName>MC_Subscriber_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>