force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__URL__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>